--- a/src/EventPlanning.Web/Views/Shared/_Layout.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,8 @@
 
         <div class="flex-grow-1 px-4 d-none d-md-flex justify-content-center">
             <form asp-controller="Home" asp-action="Index" method="get" class="search-pill-container">
-                <input type="text" name="searchTerm" class="search-input-header" placeholder="Search events (e.g. Yoga, Tech)..." />
+                <input type="text" name="searchTerm" class="search-input-header"
+                       placeholder="Search events (e.g. Yoga, Tech)..."/>
                 <button type="submit" class="search-btn-header">
                     <i class="bi bi-search"></i>
                 </button>
@@ -39,14 +40,31 @@
                 <div class="dropdown">
                     <a class="d-flex align-items-center text-decoration-none dropdown-toggle text-dark fw-bold"
                        href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <div class="bg-light rounded-circle d-flex align-items-center justify-content-center border me-2"
-                             style="width: 35px; height: 35px;">
+                        <div
+                            class="bg-light rounded-circle d-flex align-items-center justify-content-center border me-2"
+                            style="width: 35px; height: 35px;">
                             <i class="bi bi-person-fill"></i>
                         </div>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end shadow border-0 mt-2">
                         <li><h6 class="dropdown-header">@User.Identity.Name</h6></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li>
+                                <a class="dropdown-item text-primary fw-bold" asp-area="Admin" asp-controller="Venue"
+                                   asp-action="Index">
+                                    <i class="bi bi-speedometer2 me-2"></i> Admin Panel
+                                </a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                        }
+
                         <li>
                             <a class="dropdown-item" asp-controller="Profile" asp-action="Index">
                                 <i class="bi bi-person me-2"></i> My Profile
@@ -62,7 +80,9 @@
                                 <i class="bi bi-plus-circle me-2"></i> Create Event
                             </a>
                         </li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li>
                             <a class="dropdown-item text-danger" asp-controller="Account" asp-action="Logout">
                                 <i class="bi bi-box-arrow-right me-2"></i> Log out
@@ -74,7 +94,8 @@
             else
             {
                 <a class="nav-link-login text-decoration-none" asp-controller="Account" asp-action="Login">Log in</a>
-                <a class="btn-signup-header text-decoration-none" asp-controller="Account" asp-action="Register">Sign up</a>
+                <a class="btn-signup-header text-decoration-none" asp-controller="Account" asp-action="Register">Sign
+                    up</a>
             }
         </div>
     </nav>
@@ -105,9 +126,12 @@
                 </p>
                 <div class="d-flex">
                     <a href="#" class="social-icon-link"><i class="bi bi-twitter-x"></i></a>
-                    <a href="https://www.instagram.com/kuma4ka/" class="social-icon-link"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/dmytro-prokopenko-dev" class="social-icon-link"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://github.com/kuma4ka/event-planning-system" class="social-icon-link"><i class="bi bi-github"></i></a>
+                    <a href="https://www.instagram.com/kuma4ka/" class="social-icon-link"><i
+                            class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/dmytro-prokopenko-dev" class="social-icon-link"><i
+                            class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/kuma4ka/event-planning-system" class="social-icon-link"><i
+                            class="bi bi-github"></i></a>
                 </div>
             </div>
 
@@ -133,7 +157,8 @@
 
             <div class="col-lg-4 col-md-6">
                 <h5 class="footer-heading">Stay in the loop</h5>
-                <p class="text-white-50 mb-3 small">Join our newsletter to get top events curated for you every week.</p>
+                <p class="text-white-50 mb-3 small">Join our newsletter to get top events curated for you every
+                    week.</p>
                 <form class="d-flex gap-2">
                     <input type="email" class="form-control footer-subscribe-input" placeholder="Enter your email">
                     <button type="button" class="btn btn-primary px-3">Subscribe</button>
