feat(web): implement modular admin css component

--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -11,6 +11,7 @@
 @import url('components/dashboard.css');
 @import url('components/event-form.css');
 @import url('components/event-details.css');
+@import url('components/admin.css');
 
 @import url('layout/navbar.css');
 @import url('layout/hero.css');
